Remove 'RUN --mount=type=cache' from all Dockerfiles
This has been repeatedly causing issues on Namespaces runners,
(.cargo-ok "File exists" errors), so let's get rid of it

--- a/evaluations/Dockerfile
+++ b/evaluations/Dockerfile
@@ -10,9 +10,7 @@ COPY . .
 
 ARG CARGO_BUILD_FLAGS=""
 
-RUN --mount=type=cache,id=tensorzero-evaluations-release,sharing=shared,target=/usr/local/cargo/registry \
-    --mount=type=cache,id=tensorzero-evaluations-release,sharing=shared,target=/usr/local/cargo/git \
-    cargo build --release -p evaluations $CARGO_BUILD_FLAGS && \
+RUN cargo build --release -p evaluations $CARGO_BUILD_FLAGS && \
     cp -r /src/target/release /release
 
 # ========== base ==========
