--- a/tensorzero-core/tests/mock-inference-provider/Dockerfile
+++ b/tensorzero-core/tests/mock-inference-provider/Dockerfile
@@ -7,9 +7,7 @@ COPY . .
 
 ARG CARGO_BUILD_FLAGS=""
 
-RUN --mount=type=cache,id=tensorzero-mock-inference-provider-release,sharing=shared,target=/usr/local/cargo/registry \
-    --mount=type=cache,id=tensorzero-mock-inference-provider-release,sharing=shared,target=/usr/local/cargo/git \
-    cargo build --release -p mock-inference-provider $CARGO_BUILD_FLAGS && \
+RUN cargo build --release -p mock-inference-provider $CARGO_BUILD_FLAGS && \
     cp -r /src/target/release /release
 
 # ========== mock-inference-provider ==========
