Use 'actions/setup-node' pnpm cache on Github runners
This should help with the CI flakes we're seeing. I've left this off
in places where we use actions/setup-node on Namespace runners, since
we already have Namespace-level caching enabled there

--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -81,6 +81,7 @@ jobs:
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
         with:
           node-version: "22.9.0"
+          cache: "pnpm"
 
       - name: Setup `pnpm`
         run: |
