--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -109,6 +109,7 @@ jobs:
         uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e
         with:
           node-version: "22.9.0"
+          cache: "pnpm"
 
       - name: Install pnpm
         run: |
