--- a/ui/fixtures/Dockerfile.e2e
+++ b/ui/fixtures/Dockerfile.e2e
@@ -5,17 +5,22 @@ RUN npm install -g pnpm
 
 WORKDIR /app
 
-# Copy workspace configuration
-COPY pnpm-workspace.yaml package.json pnpm-lock.yaml ./
+# Copy workspace configuration and minimal package.json
+COPY pnpm-workspace.yaml ./
+COPY ui/fixtures/package.e2e.json ./ui/package.json
+# Create minimal root package.json for workspace
+RUN echo '{"name": "tensorzero-workspace", "private": true, "scripts": {"ui:test:e2e": "pnpm --filter ui test-e2e"}}' > package.json
 
 # Copy only UI package (tests and playwright config)
-COPY ui/ ui/
+COPY ui/e2e_tests/ ui/e2e_tests/
+COPY ui/playwright.config.ts ui/
 
-# Install only devDependencies needed for testing
-RUN cd ui && pnpm install --frozen-lockfile --dev --ignore-scripts
+# Install minimal dependencies needed for testing
+RUN cd ui && pnpm install --ignore-scripts
 
 # Install Playwright browsers
 RUN cd ui && pnpm exec playwright install chromium
 
 # Default command: run UI e2e tests
-ENTRYPOINT ["pnpm", "ui:test:e2e"]
+WORKDIR /app/ui
+ENTRYPOINT ["pnpm", "test-e2e"]
