--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -64,6 +64,6 @@ steps:
     env:
       TENSORZERO_CLICKHOUSE_VERSION: "{{matrix.clickhouse_version}}"
     depends_on:
-      - "build-gateway-container"
+      - "build-gateway-e2e-container"
       - "build-mock-inference-provider-container"
       - "build-clickhouse-tests-container"
