--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -38,14 +38,14 @@ steps:
           propagate-environment: true
 
   - label: ":node: Node.js Tests"
-    command: ./ci/buildkite/node-unit-tests.sh
+    command: bash ./ci/buildkite/node-unit-tests.sh
     depends_on:
       - "build-gateway-container"
       - "build-node-unit-tests-container"
 
   - label: ":playwright: UI E2E Tests"
     command: |
-      ./ci/buildkite/ui-e2e-tests.sh
+      bash ./ci/buildkite/ui-e2e-tests.sh
       cd ui/fixtures && zip -r ui-e2e-artifacts.zip test-results playwright-report
     depends_on:
       - "build-gateway-container"
@@ -56,7 +56,7 @@ steps:
       - "ui/fixtures/ui-e2e-artifacts.zip"
 
   - label: "ClickHouse Tests (version {{matrix.clickhouse_version}})"
-    command: ./ci/buildkite/clickhouse-tests.sh
+    command: bash ./ci/buildkite/clickhouse-tests.sh
     matrix:
       setup:
         clickhouse_version:
