--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -658,6 +658,8 @@ jobs:
         check-python-client-build,
         check-node-bindings,
         build-windows,
+        build-ui-container,
+        build-gateway-container,
         validate,
         clickhouse-tests,
         ui-tests,
@@ -666,5 +668,7 @@ jobs:
       ]
     runs-on: ubuntu-latest
     steps:
-      - if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}
+      # When running in the merge queue, jobs should never be skipped.
+      # In PR CI, some jobs may be intentionally skipped (e.g. due to running from a fork, or to save money)
+      - if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled' || (github.event_name == 'merge_group' && contains(needs.*.result, 'skipped'))) }}
         run: exit 1
