--- a/ui/fixtures/docker-compose.e2e.ci.yml
+++ b/ui/fixtures/docker-compose.e2e.ci.yml
@@ -135,8 +135,8 @@ services:
       start_interval: 1s
       timeout: 1s
 
-  e2e-tests:
-    image: tensorzero/e2e-tests:${TENSORZERO_E2E_TESTS_TAG:-latest}
+  ui-e2e-tests:
+    image: tensorzero/ui-e2e-tests:${TENSORZERO_UI_E2E_TESTS_TAG:-latest}
     build:
       context: ../.. # Same context as gateway since you need access to the whole monorepo
       dockerfile: ui/fixtures/Dockerfile.e2e
