added test export for clickhouse

--- a/tensorzero-core/tests/e2e/docker-compose.clickhouse.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.clickhouse.yml
@@ -94,6 +94,7 @@ services:
       - ../../fixtures:/app/tensorzero-core/fixtures:ro
       - .cargo/:/app/.cargo/
       - .config/:/app/.config/
+      - ./target/nextest/clickhouse:/app/target/nextest/clickhouse
     depends_on:
       gateway:
         condition: service_healthy
