--- a/tensorzero-core/tests/e2e/docker-compose.clickhouse.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.clickhouse.yml
@@ -57,22 +57,28 @@ services:
 
   fixtures:
     build:
-      dockerfile: ../../../ui/fixtures/Dockerfile
+      dockerfile: Dockerfile
     volumes:
-      - ../../../ui/fixtures:/fixtures
+      - .:/fixtures
       - ~/.aws:/root/.aws
     environment:
-      - CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT=1
-      - CLICKHOUSE_HOST=clickhouse
-      - CLICKHOUSE_PASSWORD=chpassword
-      - CLICKHOUSE_USER=chuser
-      - TENSORZERO_SKIP_LARGE_FIXTURES
+      CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: 1
+      CLICKHOUSE_HOST: clickhouse
+      CLICKHOUSE_PASSWORD: chpassword
+      CLICKHOUSE_USER: chuser
+      TENSORZERO_SKIP_LARGE_FIXTURES: 1
     depends_on:
       gateway:
         condition: service_healthy
-    # Keep this running to make 'check-docker-compose.sh' detect that all containers are healthy
-    command:
-      ["bash", "-c", "cd /fixtures && ./load_fixtures.sh tensorzero_e2e_tests"]
+    command: ["bash", "-c", "cd /fixtures && ./load_fixtures.sh"]
+    # Added healthcheck to wait for the marker file created by the script
+    healthcheck:
+      test: ["CMD", "test", "-f", "/load_complete.marker"]
+      interval: 5s
+      timeout: 1s
+      retries: 48 # Retry for up to 4 minutes
+      start_interval: 1s
+      start_period: 300s # Give the script time to start
 
   clickhouse-tests:
     image: tensorzero/clickhouse-tests:${TENSORZERO_CLICKHOUSE_TESTS_TAG:-latest}
