added nextest toml to dockerfile

--- a/tensorzero-core/tests/e2e/Dockerfile.clickhouse
+++ b/tensorzero-core/tests/e2e/Dockerfile.clickhouse
@@ -42,6 +42,9 @@ WORKDIR /app
 COPY . ./
 RUN rm -rf target
 
+# Ensure nextest config is available (may not be copied with COPY . ./)
+COPY .config/nextest.toml .config/nextest.toml
+
 # Copy only the test archive instead of entire target directory
 COPY --from=build-env /build/tests.tar.zst /app/tests.tar.zst
 
