--- a/tensorzero-core/tests/e2e/Dockerfile.clickhouse
+++ b/tensorzero-core/tests/e2e/Dockerfile.clickhouse
@@ -54,5 +54,5 @@ RUN cargo binstall -y cargo-nextest --secure
 # Set CI environment variable
 ENV CI=true
 
-# Set the entrypoint to run tests from archive with workspace remap and clickhouse profile
-ENTRYPOINT ["cargo", "nextest", "run", "--archive-file", "tests.tar.zst", "--workspace-remap", "/app", "--profile", "clickhouse"]
+# Set the entrypoint to run tests from archive with explicit config file and clickhouse profile
+ENTRYPOINT ["cargo", "nextest", "run", "--archive-file", "tests.tar.zst", "--workspace-remap", "/app", "--config-file", ".config/nextest.toml", "--profile", "clickhouse"]
