--- a/.dockerignore
+++ b/.dockerignore
@@ -15,3 +15,4 @@ target-rust-analyzer
 !/examples/quickstart/package.json
 !/examples/integrations/helicone/package.json
 !/examples/guides/tool-use/package.json
+!/examples/haiku-hidden-preferences
