--- a/tensorzero-core/tests/e2e/docker-compose.clickhouse.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.clickhouse.yml
@@ -66,7 +66,7 @@ services:
       - CLICKHOUSE_HOST=clickhouse
       - CLICKHOUSE_PASSWORD=chpassword
       - CLICKHOUSE_USER=chuser
-      - TENSORZERO_SKIP_LARGE_FIXTURES=1
+      # - TENSORZERO_SKIP_LARGE_FIXTURES=1
     depends_on:
       gateway:
         condition: service_healthy
