--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -10,8 +10,12 @@ steps:
   - label: "Build Mock Inference Provider Container"
     command: bash ./ci/buildkite/build-mock-inference-provider-container.sh
     key: "build-mock-inference-provider-container"
+
+  - label: "Download S3 Fixtures"
+    command: bash ./ci/buildkite/download-fixtures.sh
+    key: "download-fixtures"
     artifact_paths:
-      - mock-inference-provider-container.tar
+      - fixtures.tar.gz
 
   - label: "Build Node Unit Tests Container"
     command: bash ./ci/buildkite/build-node-unit-tests-container.sh
@@ -66,3 +70,4 @@ steps:
     depends_on:
       - "build-gateway-e2e-container"
       - "build-clickhouse-tests-container"
+      - "download-fixtures"
