--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -71,3 +71,8 @@ steps:
       - "build-gateway-e2e-container"
       - "build-clickhouse-tests-container"
       - "download-fixtures"
+
+  - label: "ClickHouse Tests (version {{matrix.clickhouse_version}})"
+    command: sleep infinity
+    depends_on:
+      - "download-fixtures"
