--- a/tensorzero-core/tests/e2e/docker-compose.clickhouse.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.clickhouse.yml
@@ -91,6 +91,7 @@ services:
       TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse:8123/tensorzero_e2e_tests
       BUILDKITE_COMMIT: ${BUILDKITE_COMMIT:-}
       TENSORZERO_GATEWAY_URL: http://gateway:3000
+      TENSORZERO_S3_FIXTURES_PATH: /app/ui/fixtures/s3-fixtures
     volumes:
       - ./tensorzero.toml:/app/tensorzero-core/tests/e2e/tensorzero.toml:ro
       - ../../fixtures:/app/tensorzero-core/fixtures:ro
