--- a/tensorzero-core/tests/e2e/docker-compose.clickhouse.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.clickhouse.yml
@@ -9,7 +9,7 @@ services:
       # If the directory doesn't exist locally (i.e. we haven't defined a version-specific config),
       # an empty dir will get mounted in the container
       - ./clickhouse-configs/${TENSORZERO_CLICKHOUSE_VERSION:-24.12-alpine}/users.xml:/etc/clickhouse-server/users.d/users.xml
-      - ../../../ui/fixtures/s3-fixtures:/var/lib/clickhouse/user_files:ro
+      - ../../../ui/fixtures/s3-fixtures:/var/lib/clickhouse/user_files
     ports:
       - "8123:8123" # HTTP port
       - "9000:9000" # Native port
