--- a/.github/workflows/cancel-stale-merge-queue.yml
+++ b/.github/workflows/cancel-stale-merge-queue.yml
@@ -22,14 +22,14 @@ jobs:
       - name: Cancel Workflow Runs by SHA
         run: |
           # Get all workflow runs for the specific SHA
-          workflow_runs=$(curl -s -H "Authorization: token ${{ github.token }}" \
+          workflow_runs=$(curl -s -H "Authorization: Bearer ${{ github.token }}" \
             "https://api.github.com/repos/${{ github.repository }}/actions/runs?head_sha=${{ github.sha }}")
           
           # Extract run IDs and cancel them
           echo "$workflow_runs" | jq -r '.workflow_runs[] | select(.status != "completed") | .id' | while read -r run_id; do
             if [ -n "$run_id" ]; then
               echo "Cancelling workflow run $run_id"
-              curl -X POST -H "Authorization: token ${{ github.token }}" \
+              curl -X POST -H "Authorization: Bearer ${{ github.token }}" \
                 "https://api.github.com/repos/${{ github.repository }}/actions/runs/$run_id/cancel"
             fi
           done
