--- a/.github/workflows/buildkite-test-suite.yml
+++ b/.github/workflows/buildkite-test-suite.yml
@@ -4,8 +4,9 @@ run-name: "Buildkite Test Suite: ${{ github.event.pull_request.title || github.r
 on:
   workflow_dispatch:
 
-  pull_request:
-    branches: ["main"]
+  # Temporarily disabled
+  # pull_request:
+  #   branches: ["main"]
 
 jobs:
   unit-tests:
