--- a/.github/workflows/cancel-stale-merge-queue.yml
+++ b/.github/workflows/cancel-stale-merge-queue.yml
@@ -12,14 +12,14 @@ jobs:
   cancel-workflows:
     name: Cancel Workflow Runs
     runs-on: ubuntu-latest
-    if: github.merge_group.reason != 'merged'
+    if: github.event.reason != 'merged'
     steps:
       - name: Get Merge Queue Commit SHA
         id: get-sha
         run: |
           echo "Repository: ${{ github.repository }}"
           echo "Head SHA: ${{ github.sha }}"
-          echo "Merge Group Reason: ${{ github.merge_group.reason }}"
+          echo "Merge Group Reason: ${{ github.event.reason }}"
 
       - name: Cancel Workflow Runs by SHA
         run: |
