--- a/ci/buildkite/merge-queue-tests.yml
+++ b/ci/buildkite/merge-queue-tests.yml
@@ -2,50 +2,94 @@ steps:
   - label: "Build Gateway Container"
     command: bash ./ci/buildkite/build-gateway-container.sh
     key: "build-gateway-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Build Gateway E2E Container"
     command: bash ./ci/buildkite/build-gateway-e2e-container.sh
     key: "build-gateway-e2e-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Build Mock Inference Provider Container"
     command: bash ./ci/buildkite/build-mock-inference-provider-container.sh
     key: "build-mock-inference-provider-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Download S3 Fixtures"
     command: bash ./ci/buildkite/download-fixtures.sh
     key: "download-fixtures"
     artifact_paths:
       - fixtures.tar.gz
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Build Node Unit Tests Container"
     command: bash ./ci/buildkite/build-node-unit-tests-container.sh
     key: "build-node-unit-tests-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Build UI Container"
     command: bash ./ci/buildkite/build-ui-container.sh
     key: "build-ui-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Build UI E2E Tests Container"
     command: bash ./ci/buildkite/build-ui-e2e-tests-container.sh
     key: "build-ui-e2e-tests-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Build ClickHouse Tests Container"
     command: bash ./ci/buildkite/build-clickhouse-tests.sh
     key: "build-clickhouse-tests-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Build Live Tests Container"
     command: bash ./ci/buildkite/build-live-tests.sh
     key: "build-live-tests-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Build Provider Proxy Container"
     command: bash ./ci/buildkite/build-provider-proxy-container.sh
     key: "build-provider-proxy-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Download Provider Proxy Cache"
     command: bash ./ci/buildkite/download-provider-proxy-cache.sh
     key: "download-provider-proxy-cache"
     artifact_paths:
       - provider-proxy-cache.tar.gz
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Modal Service Warmup"
     command: bash ./ci/buildkite/modal-warmup.sh
