--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -2,14 +2,26 @@ steps:
   - label: "Build Gateway Container"
     command: bash ./ci/buildkite/build-gateway-container.sh
     key: "build-gateway-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Build Gateway E2E Container"
     command: bash ./ci/buildkite/build-gateway-e2e-container.sh
     key: "build-gateway-e2e-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Build Mock Inference Provider Container"
     command: bash ./ci/buildkite/build-mock-inference-provider-container.sh
     key: "build-mock-inference-provider-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Download S3 Fixtures"
     command: bash ./ci/buildkite/download-fixtures.sh
@@ -20,18 +32,34 @@ steps:
   - label: "Build Node Unit Tests Container"
     command: bash ./ci/buildkite/build-node-unit-tests-container.sh
     key: "build-node-unit-tests-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Build UI Container"
     command: bash ./ci/buildkite/build-ui-container.sh
     key: "build-ui-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Build UI E2E Tests Container"
     command: bash ./ci/buildkite/build-ui-e2e-tests-container.sh
     key: "build-ui-e2e-tests-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: "Build ClickHouse Tests Container"
     command: bash ./ci/buildkite/build-clickhouse-tests.sh
     key: "build-clickhouse-tests-container"
+    retries:
+      automatic:
+        - exit_status: "*"
+          limit: 3
 
   - label: ":rust: Rust Unit Tests"
     command: bash ./ci/buildkite/rust-unit-tests.sh
