--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -2,7 +2,7 @@ steps:
   - label: "Build Gateway Container"
     command: bash ./ci/buildkite/build-gateway-container.sh
     key: "build-gateway-container"
-    retries:
+    retry:
       automatic:
         - exit_status: "*"
           limit: 3
@@ -10,7 +10,7 @@ steps:
   - label: "Build Gateway E2E Container"
     command: bash ./ci/buildkite/build-gateway-e2e-container.sh
     key: "build-gateway-e2e-container"
-    retries:
+    retry:
       automatic:
         - exit_status: "*"
           limit: 3
@@ -18,7 +18,7 @@ steps:
   - label: "Build Mock Inference Provider Container"
     command: bash ./ci/buildkite/build-mock-inference-provider-container.sh
     key: "build-mock-inference-provider-container"
-    retries:
+    retry:
       automatic:
         - exit_status: "*"
           limit: 3
@@ -32,7 +32,7 @@ steps:
   - label: "Build Node Unit Tests Container"
     command: bash ./ci/buildkite/build-node-unit-tests-container.sh
     key: "build-node-unit-tests-container"
-    retries:
+    retry:
       automatic:
         - exit_status: "*"
           limit: 3
@@ -40,7 +40,7 @@ steps:
   - label: "Build UI Container"
     command: bash ./ci/buildkite/build-ui-container.sh
     key: "build-ui-container"
-    retries:
+    retry:
       automatic:
         - exit_status: "*"
           limit: 3
@@ -48,7 +48,7 @@ steps:
   - label: "Build UI E2E Tests Container"
     command: bash ./ci/buildkite/build-ui-e2e-tests-container.sh
     key: "build-ui-e2e-tests-container"
-    retries:
+    retry:
       automatic:
         - exit_status: "*"
           limit: 3
@@ -56,7 +56,7 @@ steps:
   - label: "Build ClickHouse Tests Container"
     command: bash ./ci/buildkite/build-clickhouse-tests.sh
     key: "build-clickhouse-tests-container"
-    retries:
+    retry:
       automatic:
         - exit_status: "*"
           limit: 3
