removed bad mount

--- a/examples/guides/providers/aws-bedrock/config/tensorzero.toml
+++ b/examples/guides/providers/aws-bedrock/config/tensorzero.toml
@@ -1,7 +1,7 @@
-[models.claude_3_haiku_20240307]
+[models.sonnet]
 routing = ["aws_bedrock"]
 
-[models.claude_3_haiku_20240307.providers.aws_bedrock]
+[models.sonnet.providers.aws_bedrock]
 type = "aws_bedrock"
 model_id = "anthropic.claude-3-haiku-20240307-v1:0"
 allow_auto_detect_region = true
@@ -11,4 +11,4 @@ type = "chat"
 
 [functions.my_function_name.variants.my_variant_name]
 type = "chat_completion"
-model = "claude_3_haiku_20240307"
+model = "sonnet"
