--- a/tensorzero-core/tests/e2e/Dockerfile.live
+++ b/tensorzero-core/tests/e2e/Dockerfile.live
@@ -57,4 +57,4 @@ RUN cargo binstall -y cargo-nextest --secure
 ENV CI=true
 
 # Set the entrypoint to run tests from archive with absolute config file path and e2e profile
-ENTRYPOINT ["cargo", "nextest", "run", "--archive-file", "tests.tar.zst", "--workspace-remap", "/app", "--config-file", "/app/.config/nextest.toml", "--profile", "e2e"]
+ENTRYPOINT ["cargo", "nextest", "run", "--no-fail-fast", "--archive-file", "tests.tar.zst", "--workspace-remap", "/app", "--config-file", "/app/.config/nextest.toml", "--profile", "e2e"]
