--- a/tensorzero-core/tests/e2e/Dockerfile.live
+++ b/tensorzero-core/tests/e2e/Dockerfile.live
@@ -29,6 +29,9 @@ COPY . .
 # Install cargo-nextest using binstall
 RUN cargo binstall -y cargo-nextest --secure
 
+# Build the binaries that the tests will use
+RUN cargo build --bin evaluations --bin gateway --features e2e_tests
+
 # Build and archive tests instead of copying entire target directory
 RUN cargo nextest archive --features e2e_tests --profile e2e --archive-file tests.tar.zst
 
