--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -25,7 +25,7 @@ slow-timeout = { period = "20s", terminate-after = 3 }
 # The profile can be set with '--profile <profile-name>' when using 'cargo nextest run',
 # We also define cargo aliases for common use-cases (e.g. `cargo test-e2e`)
 [profile.e2e]
-retries = { backoff = "exponential", count = 4, delay = "5s", jitter = true, max-delay = "60s" }
+# retries = { backoff = "exponential", count = 4, delay = "5s", jitter = true, max-delay = "60s" }
 default-filter = "not (test(batch)) and not (test(test_dummy_only) | test(clickhouse))"
 junit.path = "junit.xml"
 
