use axolotl docker image

--- a/recipes/supervised_fine_tuning/axolotl/.devcontainer/devcontainer.json
+++ b/recipes/supervised_fine_tuning/axolotl/.devcontainer/devcontainer.json
@@ -1,8 +1,6 @@
 {
-  "name": "Python Container",
-  "build": {
-    "dockerfile": "Dockerfile"
-  },
+  "name": "Axolotl Container",
+  "image": "axolotlai/axolotl-base:latest",
   "features":  {
     "ghcr.io/devcontainers/features/docker-in-docker:2": {}
   },
